--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "homepage": "http://www.pdfparser.org",
     "require": {
         "php": ">=5.3.0",
-        "tecnick.com/tcpdf": ">=6.0.050"
+        "tecnick.com/tcpdf": ">=6.0.050",
+        "sunra/php-simple-html-dom-parser": "dev-master"
     },
     "require-dev": {
         "atoum/atoum": "dev-master"
